# wgr

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/wireguard/: mod.rs  types.rs
