[package]
name = "wgr"
version = "0.1.0"
authors = ["ripx80 <ripx80@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["max_level_trace", "release_max_level_info"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#serde_yaml = "0.7"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.13.0"
x25519-dalek = "1.1"
hex = "0.3.1"

# [dependencies.rtnetlink]
# version = "0.7.0"
# default-features = false
# features = []


# [target.'cfg(unix)'.dependencies]
# libc = "^0.2"

